@@ -1,5 +1,10 @@
 2008-01-02  Guillem Jover  <guillem@debian.org>
 
+	* utils/start-stop-daemon.c [!__GNUC__] (fatal, badusage): Remove
+	redundant function declarations.
+
+2008-01-02  Guillem Jover  <guillem@debian.org>
+
 	* src/main.h (struct stat): New forward declaration.
 
 2008-01-02  Guillem Jover  <guillem@debian.org>
